// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostmanMappedOperation should use the normalise the paths 1`] = `
PostmanMappedOperation {
  "id": "companiesOne",
  "item": Object {
    "event": Array [],
    "id": "29efaf91-99a8-4b1a-977b-05bc92d78cc8",
    "name": "Get company",
    "request": Object {
      "auth": Object {
        "bearer": Array [
          Object {
            "key": "token",
            "type": "string",
            "value": "{{bearerToken}}",
          },
        ],
        "type": "bearer",
      },
      "description": Object {
        "content": "Get company",
        "type": "text/plain",
      },
      "header": Array [
        Object {
          "description": Object {
            "content": "(Required) ID of the consumer which you want to get or push data from",
            "type": "text/plain",
          },
          "key": "x-apideck-consumer-id",
          "value": "{{consumerId}}",
        },
        Object {
          "description": Object {
            "content": "(Required) The ID of your Unify application",
            "type": "text/plain",
          },
          "key": "x-apideck-app-id",
          "value": "{{applicationId}}",
        },
        Object {
          "description": Object {
            "content": "Provide the service id you want to call (e.g., pipedrive). [See the full list in the connector section.](#section/Connectors) Only needed when a consumer has activated multiple integrations for a Unified API.",
            "type": "text/plain",
          },
          "key": "x-apideck-service-id",
          "value": "{{serviceId}}",
        },
      ],
      "method": "GET",
      "url": Object {
        "host": Array [
          "{{baseUrl}}",
        ],
        "path": Array [
          "crm",
          "companies",
          ":id",
        ],
        "query": Array [
          Object {
            "description": Object {
              "content": "Include raw response. Mostly used for debugging purposes",
              "type": "text/plain",
            },
            "key": "raw",
            "value": "true",
          },
        ],
        "variable": Array [
          Object {
            "description": Object {
              "content": "(Required) ID of the record you are acting upon.",
              "type": "text/plain",
            },
            "key": "id",
            "type": "any",
            "value": "{{companyId}}",
          },
        ],
      },
    },
    "response": Array [
      Object {
        "_": Object {
          "postman_previewlanguage": "json",
        },
        "body": "{
 \\"status_code\\": 200,
 \\"status\\": \\"OK\\",
 \\"service\\": \\"zoho-crm\\",
 \\"resource\\": \\"companies\\",
 \\"operation\\": \\"one\\",
 \\"data\\": {
  \\"name\\": \\"Copper\\",
  \\"id\\": \\"12345\\",
  \\"interaction_count\\": 1,
  \\"owner_id\\": \\"12345\\",
  \\"image_url\\": \\"https://www.spacex.com/static/images/share.jpg\\",
  \\"description\\": \\"A crm that works for you, so you can spend time on relationships instead of data.\\",
  \\"vat_number\\": \\"BE0689615164\\",
  \\"currency\\": \\"USD\\",
  \\"status\\": \\"Open\\",
  \\"fax\\": \\"+12129876543\\",
  \\"bank_accounts\\": [
   {
    \\"iban\\": \\"CH2989144532982975332\\",
    \\"bic\\": \\"AUDSCHGGXXX\\"
   },
   {
    \\"iban\\": \\"CH2989144532982975332\\",
    \\"bic\\": \\"AUDSCHGGXXX\\"
   }
  ],
  \\"websites\\": [
   {
    \\"url\\": \\"http://example.com\\",
    \\"id\\": \\"12345\\",
    \\"type\\": \\"primary\\"
   },
   {
    \\"url\\": \\"http://example.com\\",
    \\"id\\": \\"12345\\",
    \\"type\\": \\"primary\\"
   }
  ],
  \\"addresses\\": [
   {
    \\"id\\": \\"123\\",
    \\"type\\": \\"primary\\",
    \\"name\\": \\"HQ US\\",
    \\"line1\\": \\"Main street\\",
    \\"line2\\": \\"apt #\\",
    \\"city\\": \\"San Francisco\\",
    \\"state\\": \\"CA\\",
    \\"postal_code\\": \\"94104\\",
    \\"country\\": \\"US\\",
    \\"latitude\\": \\"40.759211\\",
    \\"longitude\\": \\"-73.984638\\"
   },
   {
    \\"id\\": \\"123\\",
    \\"type\\": \\"primary\\",
    \\"name\\": \\"HQ US\\",
    \\"line1\\": \\"Main street\\",
    \\"line2\\": \\"apt #\\",
    \\"city\\": \\"San Francisco\\",
    \\"state\\": \\"CA\\",
    \\"postal_code\\": \\"94104\\",
    \\"country\\": \\"US\\",
    \\"latitude\\": \\"40.759211\\",
    \\"longitude\\": \\"-73.984638\\"
   }
  ],
  \\"social_links\\": [
   {
    \\"url\\": \\"https://www.twitter.com/apideck-io\\",
    \\"id\\": \\"12345\\",
    \\"type\\": \\"twitter\\"
   },
   {
    \\"url\\": \\"https://www.twitter.com/apideck-io\\",
    \\"id\\": \\"12345\\",
    \\"type\\": \\"twitter\\"
   }
  ],
  \\"phone_numbers\\": [
   {
    \\"number\\": \\"111-111-1111\\",
    \\"id\\": \\"12345\\",
    \\"type\\": \\"primary\\"
   },
   {
    \\"number\\": \\"111-111-1111\\",
    \\"id\\": \\"12345\\",
    \\"type\\": \\"primary\\"
   }
  ],
  \\"emails\\": [
   {
    \\"email\\": \\"elon@musk.com\\",
    \\"id\\": \\"123\\",
    \\"type\\": \\"primary\\"
   },
   {
    \\"email\\": \\"elon@musk.com\\",
    \\"id\\": \\"123\\",
    \\"type\\": \\"primary\\"
   }
  ],
  \\"custom_fields\\": [
   {
    \\"id\\": \\"custom_technologies\\",
    \\"value\\": \\"Uses Salesforce and Marketo\\"
   },
   {
    \\"id\\": \\"custom_technologies\\",
    \\"value\\": true
   }
  ],
  \\"tags\\": [
   \\"New\\"
  ],
  \\"updated_by\\": \\"12345\\",
  \\"created_by\\": \\"12345\\",
  \\"updated_at\\": \\"2020-09-30T07:43:32.000Z\\",
  \\"created_at\\": \\"2020-09-30T07:43:32.000Z\\"
 }
}",
        "code": 200,
        "cookie": Array [],
        "header": Array [
          Object {
            "key": "Content-Type",
            "value": "application/json",
          },
        ],
        "id": "d9aab1a8-788b-4dff-a4a6-8ba084de37f8",
        "name": "Company",
        "originalRequest": Object {
          "header": Array [
            Object {
              "description": Object {
                "content": "Added as a part of security scheme: bearer",
                "type": "text/plain",
              },
              "key": "Authorization",
              "value": "{{bearerToken}}",
            },
            Object {
              "description": Object {
                "content": "(Required) ID of the consumer which you want to get or push data from",
                "type": "text/plain",
              },
              "key": "x-apideck-consumer-id",
              "value": "{{consumerId}}",
            },
            Object {
              "description": Object {
                "content": "(Required) The ID of your Unify application",
                "type": "text/plain",
              },
              "key": "x-apideck-app-id",
              "value": "{{applicationId}}",
            },
            Object {
              "description": Object {
                "content": "Provide the service id you want to call (e.g., pipedrive). [See the full list in the connector section.](#section/Connectors) Only needed when a consumer has activated multiple integrations for a Unified API.",
                "type": "text/plain",
              },
              "key": "x-apideck-service-id",
              "value": "{{serviceId}}",
            },
          ],
          "method": "GET",
          "url": Object {
            "host": Array [
              "{{baseUrl}}",
            ],
            "path": Array [
              "crm",
              "companies",
              ":id",
            ],
            "query": Array [
              Object {
                "key": "raw",
                "value": "true",
              },
            ],
            "variable": Array [
              Object {
                "key": "id",
                "type": "any",
              },
            ],
          },
        },
        "status": "OK",
      },
      Object {
        "_": Object {
          "postman_previewlanguage": "json",
        },
        "body": "{
 \\"status_code\\": 400,
 \\"error\\": \\"Bad Request\\",
 \\"typeName\\": \\"MissingHeadersError\\",
 \\"message\\": \\"Invalid Params\\",
 \\"detail\\": {},
 \\"ref\\": \\"https://developers.apideck.com/errors#missingheaderserror\\"
}",
        "code": 400,
        "cookie": Array [],
        "header": Array [
          Object {
            "key": "Content-Type",
            "value": "application/json",
          },
        ],
        "id": "1a422ad9-e1b9-4789-9c89-ecac0315ec24",
        "name": "Bad Request",
        "originalRequest": Object {
          "header": Array [
            Object {
              "description": Object {
                "content": "Added as a part of security scheme: bearer",
                "type": "text/plain",
              },
              "key": "Authorization",
              "value": "{{bearerToken}}",
            },
            Object {
              "description": Object {
                "content": "(Required) ID of the consumer which you want to get or push data from",
                "type": "text/plain",
              },
              "key": "x-apideck-consumer-id",
              "value": "{{consumerId}}",
            },
            Object {
              "description": Object {
                "content": "(Required) The ID of your Unify application",
                "type": "text/plain",
              },
              "key": "x-apideck-app-id",
              "value": "{{applicationId}}",
            },
            Object {
              "description": Object {
                "content": "Provide the service id you want to call (e.g., pipedrive). [See the full list in the connector section.](#section/Connectors) Only needed when a consumer has activated multiple integrations for a Unified API.",
                "type": "text/plain",
              },
              "key": "x-apideck-service-id",
              "value": "{{serviceId}}",
            },
          ],
          "method": "GET",
          "url": Object {
            "host": Array [
              "{{baseUrl}}",
            ],
            "path": Array [
              "crm",
              "companies",
              ":id",
            ],
            "query": Array [
              Object {
                "key": "raw",
                "value": "true",
              },
            ],
            "variable": Array [
              Object {
                "key": "id",
                "type": "any",
              },
            ],
          },
        },
        "status": "Bad Request",
      },
      Object {
        "_": Object {
          "postman_previewlanguage": "json",
        },
        "body": "{
 \\"status_code\\": 401,
 \\"error\\": \\"Unauthorized\\",
 \\"typeName\\": \\"UnauthorizedError\\",
 \\"message\\": \\"Unauthorized Request\\",
 \\"detail\\": {},
 \\"ref\\": \\"https://developers.apideck.com/errors#unauthorizederror\\"
}",
        "code": 401,
        "cookie": Array [],
        "header": Array [
          Object {
            "key": "Content-Type",
            "value": "application/json",
          },
        ],
        "id": "494592ad-92dc-4dd5-8dc2-7ea0c2081e61",
        "name": "Unauthorized",
        "originalRequest": Object {
          "header": Array [
            Object {
              "description": Object {
                "content": "Added as a part of security scheme: bearer",
                "type": "text/plain",
              },
              "key": "Authorization",
              "value": "{{bearerToken}}",
            },
            Object {
              "description": Object {
                "content": "(Required) ID of the consumer which you want to get or push data from",
                "type": "text/plain",
              },
              "key": "x-apideck-consumer-id",
              "value": "{{consumerId}}",
            },
            Object {
              "description": Object {
                "content": "(Required) The ID of your Unify application",
                "type": "text/plain",
              },
              "key": "x-apideck-app-id",
              "value": "{{applicationId}}",
            },
            Object {
              "description": Object {
                "content": "Provide the service id you want to call (e.g., pipedrive). [See the full list in the connector section.](#section/Connectors) Only needed when a consumer has activated multiple integrations for a Unified API.",
                "type": "text/plain",
              },
              "key": "x-apideck-service-id",
              "value": "{{serviceId}}",
            },
          ],
          "method": "GET",
          "url": Object {
            "host": Array [
              "{{baseUrl}}",
            ],
            "path": Array [
              "crm",
              "companies",
              ":id",
            ],
            "query": Array [
              Object {
                "key": "raw",
                "value": "true",
              },
            ],
            "variable": Array [
              Object {
                "key": "id",
                "type": "any",
              },
            ],
          },
        },
        "status": "Unauthorized",
      },
      Object {
        "_": Object {
          "postman_previewlanguage": "json",
        },
        "body": "{
 \\"status_code\\": 402,
 \\"error\\": \\"Payment Required\\",
 \\"typeName\\": \\"RequestLimitError\\",
 \\"message\\": \\"Request Limit Reached\\",
 \\"detail\\": \\"You have reached your limit of 2000\\",
 \\"ref\\": \\"https://developers.apideck.com/errors#requestlimiterror\\"
}",
        "code": 402,
        "cookie": Array [],
        "header": Array [
          Object {
            "key": "Content-Type",
            "value": "application/json",
          },
        ],
        "id": "00fccb65-70a5-4ee8-a35e-3e1a049ef212",
        "name": "Payment Required",
        "originalRequest": Object {
          "header": Array [
            Object {
              "description": Object {
                "content": "Added as a part of security scheme: bearer",
                "type": "text/plain",
              },
              "key": "Authorization",
              "value": "{{bearerToken}}",
            },
            Object {
              "description": Object {
                "content": "(Required) ID of the consumer which you want to get or push data from",
                "type": "text/plain",
              },
              "key": "x-apideck-consumer-id",
              "value": "{{consumerId}}",
            },
            Object {
              "description": Object {
                "content": "(Required) The ID of your Unify application",
                "type": "text/plain",
              },
              "key": "x-apideck-app-id",
              "value": "{{applicationId}}",
            },
            Object {
              "description": Object {
                "content": "Provide the service id you want to call (e.g., pipedrive). [See the full list in the connector section.](#section/Connectors) Only needed when a consumer has activated multiple integrations for a Unified API.",
                "type": "text/plain",
              },
              "key": "x-apideck-service-id",
              "value": "{{serviceId}}",
            },
          ],
          "method": "GET",
          "url": Object {
            "host": Array [
              "{{baseUrl}}",
            ],
            "path": Array [
              "crm",
              "companies",
              ":id",
            ],
            "query": Array [
              Object {
                "key": "raw",
                "value": "true",
              },
            ],
            "variable": Array [
              Object {
                "key": "id",
                "type": "any",
              },
            ],
          },
        },
        "status": "Payment Required",
      },
      Object {
        "_": Object {
          "postman_previewlanguage": "json",
        },
        "body": "{
 \\"status_code\\": 404,
 \\"error\\": \\"Not Found\\",
 \\"typeName\\": \\"EntityNotFoundError\\",
 \\"message\\": \\"Unknown Widget\\",
 \\"detail\\": \\"Could not find widget with id: '123'\\",
 \\"ref\\": \\"https://developers.apideck.com/errors#entitynotfounderror\\"
}",
        "code": 404,
        "cookie": Array [],
        "header": Array [
          Object {
            "key": "Content-Type",
            "value": "application/json",
          },
        ],
        "id": "e382a9cf-df83-478c-b77e-c2b242fe0273",
        "name": "The specified resource was not found",
        "originalRequest": Object {
          "header": Array [
            Object {
              "description": Object {
                "content": "Added as a part of security scheme: bearer",
                "type": "text/plain",
              },
              "key": "Authorization",
              "value": "{{bearerToken}}",
            },
            Object {
              "description": Object {
                "content": "(Required) ID of the consumer which you want to get or push data from",
                "type": "text/plain",
              },
              "key": "x-apideck-consumer-id",
              "value": "{{consumerId}}",
            },
            Object {
              "description": Object {
                "content": "(Required) The ID of your Unify application",
                "type": "text/plain",
              },
              "key": "x-apideck-app-id",
              "value": "{{applicationId}}",
            },
            Object {
              "description": Object {
                "content": "Provide the service id you want to call (e.g., pipedrive). [See the full list in the connector section.](#section/Connectors) Only needed when a consumer has activated multiple integrations for a Unified API.",
                "type": "text/plain",
              },
              "key": "x-apideck-service-id",
              "value": "{{serviceId}}",
            },
          ],
          "method": "GET",
          "url": Object {
            "host": Array [
              "{{baseUrl}}",
            ],
            "path": Array [
              "crm",
              "companies",
              ":id",
            ],
            "query": Array [
              Object {
                "key": "raw",
                "value": "true",
              },
            ],
            "variable": Array [
              Object {
                "key": "id",
                "type": "any",
              },
            ],
          },
        },
        "status": "Not Found",
      },
      Object {
        "_": Object {
          "postman_previewlanguage": "json",
        },
        "body": "{
 \\"status_code\\": 422,
 \\"error\\": \\"Unprocessable Entity\\",
 \\"typeName\\": \\"InvalidStateError\\",
 \\"message\\": \\"Invalid State\\",
 \\"detail\\": \\"State did not include unified_api\\",
 \\"ref\\": \\"https://developers.apideck.com/errors#invalidstateerror\\"
}",
        "code": 422,
        "cookie": Array [],
        "header": Array [
          Object {
            "key": "Content-Type",
            "value": "application/json",
          },
        ],
        "id": "cf3cab28-497b-4110-af07-743f4cc62c4c",
        "name": "Unprocessable",
        "originalRequest": Object {
          "header": Array [
            Object {
              "description": Object {
                "content": "Added as a part of security scheme: bearer",
                "type": "text/plain",
              },
              "key": "Authorization",
              "value": "{{bearerToken}}",
            },
            Object {
              "description": Object {
                "content": "(Required) ID of the consumer which you want to get or push data from",
                "type": "text/plain",
              },
              "key": "x-apideck-consumer-id",
              "value": "{{consumerId}}",
            },
            Object {
              "description": Object {
                "content": "(Required) The ID of your Unify application",
                "type": "text/plain",
              },
              "key": "x-apideck-app-id",
              "value": "{{applicationId}}",
            },
            Object {
              "description": Object {
                "content": "Provide the service id you want to call (e.g., pipedrive). [See the full list in the connector section.](#section/Connectors) Only needed when a consumer has activated multiple integrations for a Unified API.",
                "type": "text/plain",
              },
              "key": "x-apideck-service-id",
              "value": "{{serviceId}}",
            },
          ],
          "method": "GET",
          "url": Object {
            "host": Array [
              "{{baseUrl}}",
            ],
            "path": Array [
              "crm",
              "companies",
              ":id",
            ],
            "query": Array [
              Object {
                "key": "raw",
                "value": "true",
              },
            ],
            "variable": Array [
              Object {
                "key": "id",
                "type": "any",
              },
            ],
          },
        },
        "status": "Unprocessable Entity (WebDAV) (RFC 4918)",
      },
      Object {
        "_": Object {
          "postman_previewlanguage": "json",
        },
        "body": "{
 \\"status_code\\": 400,
 \\"error\\": \\"Bad Request\\",
 \\"typeName\\": \\"MissingHeadersError\\",
 \\"message\\": \\"Invalid Params\\",
 \\"detail\\": \\"occaecat Excepteur incididunt magna\\",
 \\"ref\\": \\"https://developers.apideck.com/errors#unauthorizederror\\"
}",
        "code": 500,
        "cookie": Array [],
        "header": Array [
          Object {
            "key": "Content-Type",
            "value": "application/json",
          },
        ],
        "id": "7fbf39c2-8bcc-4db0-9620-c36550bedee1",
        "name": "Unexpected error",
        "originalRequest": Object {
          "header": Array [
            Object {
              "description": Object {
                "content": "Added as a part of security scheme: bearer",
                "type": "text/plain",
              },
              "key": "Authorization",
              "value": "{{bearerToken}}",
            },
            Object {
              "description": Object {
                "content": "(Required) ID of the consumer which you want to get or push data from",
                "type": "text/plain",
              },
              "key": "x-apideck-consumer-id",
              "value": "{{consumerId}}",
            },
            Object {
              "description": Object {
                "content": "(Required) The ID of your Unify application",
                "type": "text/plain",
              },
              "key": "x-apideck-app-id",
              "value": "{{applicationId}}",
            },
            Object {
              "description": Object {
                "content": "Provide the service id you want to call (e.g., pipedrive). [See the full list in the connector section.](#section/Connectors) Only needed when a consumer has activated multiple integrations for a Unified API.",
                "type": "text/plain",
              },
              "key": "x-apideck-service-id",
              "value": "{{serviceId}}",
            },
          ],
          "method": "GET",
          "url": Object {
            "host": Array [
              "{{baseUrl}}",
            ],
            "path": Array [
              "crm",
              "companies",
              ":id",
            ],
            "query": Array [
              Object {
                "key": "raw",
                "value": "true",
              },
            ],
            "variable": Array [
              Object {
                "key": "id",
                "type": "any",
              },
            ],
          },
        },
        "status": "Internal Server Error",
      },
    ],
  },
  "method": "GET",
  "path": "/crm/companies/:id",
  "pathParams": Array [
    Object {
      "description": "(Required) ID of the record you are acting upon.",
      "name": "id",
      "value": "{{companyId}}",
    },
  ],
  "pathRef": "GET::/crm/companies/{id}",
  "pathRefVariable": "GET::/crm/companies/{{companyId}}",
  "queryParams": Array [
    Object {
      "name": "raw",
      "value": "true",
    },
  ],
  "requestHeaders": Array [
    Object {
      "description": "(Required) ID of the consumer which you want to get or push data from",
      "name": "x-apideck-consumer-id",
      "value": "{{consumerId}}",
    },
    Object {
      "description": "(Required) The ID of your Unify application",
      "name": "x-apideck-app-id",
      "value": "{{applicationId}}",
    },
    Object {
      "description": "Provide the service id you want to call (e.g., pipedrive). [See the full list in the connector section.](#section/Connectors) Only needed when a consumer has activated multiple integrations for a Unified API.",
      "name": "x-apideck-service-id",
      "value": "{{serviceId}}",
    },
  ],
}
`;

exports[`PostmanMappedOperation should use the operationIdMap to add id 1`] = `
PostmanMappedOperation {
  "id": "companiesOne",
  "item": Object {
    "event": Array [],
    "id": "bac30fca-56f9-429b-a9a7-8c014d30961c",
    "name": "Get company",
    "request": Object {
      "auth": Object {
        "bearer": Array [
          Object {
            "key": "token",
            "type": "string",
            "value": "{{bearerToken}}",
          },
        ],
        "type": "bearer",
      },
      "description": Object {
        "content": "Get company",
        "type": "text/plain",
      },
      "header": Array [
        Object {
          "description": Object {
            "content": "(Required) ID of the consumer which you want to get or push data from",
            "type": "text/plain",
          },
          "key": "x-apideck-consumer-id",
          "value": "{{consumerId}}",
        },
        Object {
          "description": Object {
            "content": "(Required) The ID of your Unify application",
            "type": "text/plain",
          },
          "key": "x-apideck-app-id",
          "value": "{{applicationId}}",
        },
        Object {
          "description": Object {
            "content": "Provide the service id you want to call (e.g., pipedrive). [See the full list in the connector section.](#section/Connectors) Only needed when a consumer has activated multiple integrations for a Unified API.",
            "type": "text/plain",
          },
          "key": "x-apideck-service-id",
          "value": "{{serviceId}}",
        },
      ],
      "method": "GET",
      "url": Object {
        "host": Array [
          "{{baseUrl}}",
        ],
        "path": Array [
          "crm",
          "companies",
          ":id",
        ],
        "query": Array [
          Object {
            "description": Object {
              "content": "Include raw response. Mostly used for debugging purposes",
              "type": "text/plain",
            },
            "key": "raw",
            "value": "true",
          },
        ],
        "variable": Array [
          Object {
            "description": Object {
              "content": "(Required) ID of the record you are acting upon.",
              "type": "text/plain",
            },
            "key": "id",
            "type": "any",
            "value": "{{companyId}}",
          },
        ],
      },
    },
    "response": Array [
      Object {
        "_": Object {
          "postman_previewlanguage": "json",
        },
        "body": "{
 \\"status_code\\": 200,
 \\"status\\": \\"OK\\",
 \\"service\\": \\"zoho-crm\\",
 \\"resource\\": \\"companies\\",
 \\"operation\\": \\"one\\",
 \\"data\\": {
  \\"name\\": \\"Copper\\",
  \\"id\\": \\"12345\\",
  \\"interaction_count\\": 1,
  \\"owner_id\\": \\"12345\\",
  \\"image_url\\": \\"https://www.spacex.com/static/images/share.jpg\\",
  \\"description\\": \\"A crm that works for you, so you can spend time on relationships instead of data.\\",
  \\"vat_number\\": \\"BE0689615164\\",
  \\"currency\\": \\"USD\\",
  \\"status\\": \\"Open\\",
  \\"fax\\": \\"+12129876543\\",
  \\"bank_accounts\\": [
   {
    \\"iban\\": \\"CH2989144532982975332\\",
    \\"bic\\": \\"AUDSCHGGXXX\\"
   },
   {
    \\"iban\\": \\"CH2989144532982975332\\",
    \\"bic\\": \\"AUDSCHGGXXX\\"
   }
  ],
  \\"websites\\": [
   {
    \\"url\\": \\"http://example.com\\",
    \\"id\\": \\"12345\\",
    \\"type\\": \\"primary\\"
   },
   {
    \\"url\\": \\"http://example.com\\",
    \\"id\\": \\"12345\\",
    \\"type\\": \\"primary\\"
   }
  ],
  \\"addresses\\": [
   {
    \\"id\\": \\"123\\",
    \\"type\\": \\"primary\\",
    \\"name\\": \\"HQ US\\",
    \\"line1\\": \\"Main street\\",
    \\"line2\\": \\"apt #\\",
    \\"city\\": \\"San Francisco\\",
    \\"state\\": \\"CA\\",
    \\"postal_code\\": \\"94104\\",
    \\"country\\": \\"US\\",
    \\"latitude\\": \\"40.759211\\",
    \\"longitude\\": \\"-73.984638\\"
   },
   {
    \\"id\\": \\"123\\",
    \\"type\\": \\"primary\\",
    \\"name\\": \\"HQ US\\",
    \\"line1\\": \\"Main street\\",
    \\"line2\\": \\"apt #\\",
    \\"city\\": \\"San Francisco\\",
    \\"state\\": \\"CA\\",
    \\"postal_code\\": \\"94104\\",
    \\"country\\": \\"US\\",
    \\"latitude\\": \\"40.759211\\",
    \\"longitude\\": \\"-73.984638\\"
   }
  ],
  \\"social_links\\": [
   {
    \\"url\\": \\"https://www.twitter.com/apideck-io\\",
    \\"id\\": \\"12345\\",
    \\"type\\": \\"twitter\\"
   },
   {
    \\"url\\": \\"https://www.twitter.com/apideck-io\\",
    \\"id\\": \\"12345\\",
    \\"type\\": \\"twitter\\"
   }
  ],
  \\"phone_numbers\\": [
   {
    \\"number\\": \\"111-111-1111\\",
    \\"id\\": \\"12345\\",
    \\"type\\": \\"primary\\"
   },
   {
    \\"number\\": \\"111-111-1111\\",
    \\"id\\": \\"12345\\",
    \\"type\\": \\"primary\\"
   }
  ],
  \\"emails\\": [
   {
    \\"email\\": \\"elon@musk.com\\",
    \\"id\\": \\"123\\",
    \\"type\\": \\"primary\\"
   },
   {
    \\"email\\": \\"elon@musk.com\\",
    \\"id\\": \\"123\\",
    \\"type\\": \\"primary\\"
   }
  ],
  \\"custom_fields\\": [
   {
    \\"id\\": \\"custom_technologies\\",
    \\"value\\": \\"Uses Salesforce and Marketo\\"
   },
   {
    \\"id\\": \\"custom_technologies\\",
    \\"value\\": true
   }
  ],
  \\"tags\\": [
   \\"New\\"
  ],
  \\"updated_by\\": \\"12345\\",
  \\"created_by\\": \\"12345\\",
  \\"updated_at\\": \\"2020-09-30T07:43:32.000Z\\",
  \\"created_at\\": \\"2020-09-30T07:43:32.000Z\\"
 }
}",
        "code": 200,
        "cookie": Array [],
        "header": Array [
          Object {
            "key": "Content-Type",
            "value": "application/json",
          },
        ],
        "id": "b0e0dc3f-072a-404e-bb12-35ebe9d23e13",
        "name": "Company",
        "originalRequest": Object {
          "header": Array [
            Object {
              "description": Object {
                "content": "Added as a part of security scheme: bearer",
                "type": "text/plain",
              },
              "key": "Authorization",
              "value": "{{bearerToken}}",
            },
            Object {
              "description": Object {
                "content": "(Required) ID of the consumer which you want to get or push data from",
                "type": "text/plain",
              },
              "key": "x-apideck-consumer-id",
              "value": "{{consumerId}}",
            },
            Object {
              "description": Object {
                "content": "(Required) The ID of your Unify application",
                "type": "text/plain",
              },
              "key": "x-apideck-app-id",
              "value": "{{applicationId}}",
            },
            Object {
              "description": Object {
                "content": "Provide the service id you want to call (e.g., pipedrive). [See the full list in the connector section.](#section/Connectors) Only needed when a consumer has activated multiple integrations for a Unified API.",
                "type": "text/plain",
              },
              "key": "x-apideck-service-id",
              "value": "{{serviceId}}",
            },
          ],
          "method": "GET",
          "url": Object {
            "host": Array [
              "{{baseUrl}}",
            ],
            "path": Array [
              "crm",
              "companies",
              ":id",
            ],
            "query": Array [
              Object {
                "key": "raw",
                "value": "true",
              },
            ],
            "variable": Array [
              Object {
                "key": "id",
                "type": "any",
              },
            ],
          },
        },
        "status": "OK",
      },
      Object {
        "_": Object {
          "postman_previewlanguage": "json",
        },
        "body": "{
 \\"status_code\\": 400,
 \\"error\\": \\"Bad Request\\",
 \\"typeName\\": \\"MissingHeadersError\\",
 \\"message\\": \\"Invalid Params\\",
 \\"detail\\": {},
 \\"ref\\": \\"https://developers.apideck.com/errors#missingheaderserror\\"
}",
        "code": 400,
        "cookie": Array [],
        "header": Array [
          Object {
            "key": "Content-Type",
            "value": "application/json",
          },
        ],
        "id": "b10ec508-2530-40ee-93c4-8ccc5951a47f",
        "name": "Bad Request",
        "originalRequest": Object {
          "header": Array [
            Object {
              "description": Object {
                "content": "Added as a part of security scheme: bearer",
                "type": "text/plain",
              },
              "key": "Authorization",
              "value": "{{bearerToken}}",
            },
            Object {
              "description": Object {
                "content": "(Required) ID of the consumer which you want to get or push data from",
                "type": "text/plain",
              },
              "key": "x-apideck-consumer-id",
              "value": "{{consumerId}}",
            },
            Object {
              "description": Object {
                "content": "(Required) The ID of your Unify application",
                "type": "text/plain",
              },
              "key": "x-apideck-app-id",
              "value": "{{applicationId}}",
            },
            Object {
              "description": Object {
                "content": "Provide the service id you want to call (e.g., pipedrive). [See the full list in the connector section.](#section/Connectors) Only needed when a consumer has activated multiple integrations for a Unified API.",
                "type": "text/plain",
              },
              "key": "x-apideck-service-id",
              "value": "{{serviceId}}",
            },
          ],
          "method": "GET",
          "url": Object {
            "host": Array [
              "{{baseUrl}}",
            ],
            "path": Array [
              "crm",
              "companies",
              ":id",
            ],
            "query": Array [
              Object {
                "key": "raw",
                "value": "true",
              },
            ],
            "variable": Array [
              Object {
                "key": "id",
                "type": "any",
              },
            ],
          },
        },
        "status": "Bad Request",
      },
      Object {
        "_": Object {
          "postman_previewlanguage": "json",
        },
        "body": "{
 \\"status_code\\": 401,
 \\"error\\": \\"Unauthorized\\",
 \\"typeName\\": \\"UnauthorizedError\\",
 \\"message\\": \\"Unauthorized Request\\",
 \\"detail\\": {},
 \\"ref\\": \\"https://developers.apideck.com/errors#unauthorizederror\\"
}",
        "code": 401,
        "cookie": Array [],
        "header": Array [
          Object {
            "key": "Content-Type",
            "value": "application/json",
          },
        ],
        "id": "fa1711b4-e0d1-4c83-8786-14b3d6c32f8b",
        "name": "Unauthorized",
        "originalRequest": Object {
          "header": Array [
            Object {
              "description": Object {
                "content": "Added as a part of security scheme: bearer",
                "type": "text/plain",
              },
              "key": "Authorization",
              "value": "{{bearerToken}}",
            },
            Object {
              "description": Object {
                "content": "(Required) ID of the consumer which you want to get or push data from",
                "type": "text/plain",
              },
              "key": "x-apideck-consumer-id",
              "value": "{{consumerId}}",
            },
            Object {
              "description": Object {
                "content": "(Required) The ID of your Unify application",
                "type": "text/plain",
              },
              "key": "x-apideck-app-id",
              "value": "{{applicationId}}",
            },
            Object {
              "description": Object {
                "content": "Provide the service id you want to call (e.g., pipedrive). [See the full list in the connector section.](#section/Connectors) Only needed when a consumer has activated multiple integrations for a Unified API.",
                "type": "text/plain",
              },
              "key": "x-apideck-service-id",
              "value": "{{serviceId}}",
            },
          ],
          "method": "GET",
          "url": Object {
            "host": Array [
              "{{baseUrl}}",
            ],
            "path": Array [
              "crm",
              "companies",
              ":id",
            ],
            "query": Array [
              Object {
                "key": "raw",
                "value": "true",
              },
            ],
            "variable": Array [
              Object {
                "key": "id",
                "type": "any",
              },
            ],
          },
        },
        "status": "Unauthorized",
      },
      Object {
        "_": Object {
          "postman_previewlanguage": "json",
        },
        "body": "{
 \\"status_code\\": 402,
 \\"error\\": \\"Payment Required\\",
 \\"typeName\\": \\"RequestLimitError\\",
 \\"message\\": \\"Request Limit Reached\\",
 \\"detail\\": \\"You have reached your limit of 2000\\",
 \\"ref\\": \\"https://developers.apideck.com/errors#requestlimiterror\\"
}",
        "code": 402,
        "cookie": Array [],
        "header": Array [
          Object {
            "key": "Content-Type",
            "value": "application/json",
          },
        ],
        "id": "847cb2e3-8af8-4625-87d8-6b12e3091794",
        "name": "Payment Required",
        "originalRequest": Object {
          "header": Array [
            Object {
              "description": Object {
                "content": "Added as a part of security scheme: bearer",
                "type": "text/plain",
              },
              "key": "Authorization",
              "value": "{{bearerToken}}",
            },
            Object {
              "description": Object {
                "content": "(Required) ID of the consumer which you want to get or push data from",
                "type": "text/plain",
              },
              "key": "x-apideck-consumer-id",
              "value": "{{consumerId}}",
            },
            Object {
              "description": Object {
                "content": "(Required) The ID of your Unify application",
                "type": "text/plain",
              },
              "key": "x-apideck-app-id",
              "value": "{{applicationId}}",
            },
            Object {
              "description": Object {
                "content": "Provide the service id you want to call (e.g., pipedrive). [See the full list in the connector section.](#section/Connectors) Only needed when a consumer has activated multiple integrations for a Unified API.",
                "type": "text/plain",
              },
              "key": "x-apideck-service-id",
              "value": "{{serviceId}}",
            },
          ],
          "method": "GET",
          "url": Object {
            "host": Array [
              "{{baseUrl}}",
            ],
            "path": Array [
              "crm",
              "companies",
              ":id",
            ],
            "query": Array [
              Object {
                "key": "raw",
                "value": "true",
              },
            ],
            "variable": Array [
              Object {
                "key": "id",
                "type": "any",
              },
            ],
          },
        },
        "status": "Payment Required",
      },
      Object {
        "_": Object {
          "postman_previewlanguage": "json",
        },
        "body": "{
 \\"status_code\\": 404,
 \\"error\\": \\"Not Found\\",
 \\"typeName\\": \\"EntityNotFoundError\\",
 \\"message\\": \\"Unknown Widget\\",
 \\"detail\\": \\"Could not find widget with id: '123'\\",
 \\"ref\\": \\"https://developers.apideck.com/errors#entitynotfounderror\\"
}",
        "code": 404,
        "cookie": Array [],
        "header": Array [
          Object {
            "key": "Content-Type",
            "value": "application/json",
          },
        ],
        "id": "6ffcd0c1-aa7a-4eb3-bd8b-ff20811999eb",
        "name": "The specified resource was not found",
        "originalRequest": Object {
          "header": Array [
            Object {
              "description": Object {
                "content": "Added as a part of security scheme: bearer",
                "type": "text/plain",
              },
              "key": "Authorization",
              "value": "{{bearerToken}}",
            },
            Object {
              "description": Object {
                "content": "(Required) ID of the consumer which you want to get or push data from",
                "type": "text/plain",
              },
              "key": "x-apideck-consumer-id",
              "value": "{{consumerId}}",
            },
            Object {
              "description": Object {
                "content": "(Required) The ID of your Unify application",
                "type": "text/plain",
              },
              "key": "x-apideck-app-id",
              "value": "{{applicationId}}",
            },
            Object {
              "description": Object {
                "content": "Provide the service id you want to call (e.g., pipedrive). [See the full list in the connector section.](#section/Connectors) Only needed when a consumer has activated multiple integrations for a Unified API.",
                "type": "text/plain",
              },
              "key": "x-apideck-service-id",
              "value": "{{serviceId}}",
            },
          ],
          "method": "GET",
          "url": Object {
            "host": Array [
              "{{baseUrl}}",
            ],
            "path": Array [
              "crm",
              "companies",
              ":id",
            ],
            "query": Array [
              Object {
                "key": "raw",
                "value": "true",
              },
            ],
            "variable": Array [
              Object {
                "key": "id",
                "type": "any",
              },
            ],
          },
        },
        "status": "Not Found",
      },
      Object {
        "_": Object {
          "postman_previewlanguage": "json",
        },
        "body": "{
 \\"status_code\\": 422,
 \\"error\\": \\"Unprocessable Entity\\",
 \\"typeName\\": \\"InvalidStateError\\",
 \\"message\\": \\"Invalid State\\",
 \\"detail\\": \\"State did not include unified_api\\",
 \\"ref\\": \\"https://developers.apideck.com/errors#invalidstateerror\\"
}",
        "code": 422,
        "cookie": Array [],
        "header": Array [
          Object {
            "key": "Content-Type",
            "value": "application/json",
          },
        ],
        "id": "e2296bb1-f6c5-40d9-88e8-1e2499b9ce10",
        "name": "Unprocessable",
        "originalRequest": Object {
          "header": Array [
            Object {
              "description": Object {
                "content": "Added as a part of security scheme: bearer",
                "type": "text/plain",
              },
              "key": "Authorization",
              "value": "{{bearerToken}}",
            },
            Object {
              "description": Object {
                "content": "(Required) ID of the consumer which you want to get or push data from",
                "type": "text/plain",
              },
              "key": "x-apideck-consumer-id",
              "value": "{{consumerId}}",
            },
            Object {
              "description": Object {
                "content": "(Required) The ID of your Unify application",
                "type": "text/plain",
              },
              "key": "x-apideck-app-id",
              "value": "{{applicationId}}",
            },
            Object {
              "description": Object {
                "content": "Provide the service id you want to call (e.g., pipedrive). [See the full list in the connector section.](#section/Connectors) Only needed when a consumer has activated multiple integrations for a Unified API.",
                "type": "text/plain",
              },
              "key": "x-apideck-service-id",
              "value": "{{serviceId}}",
            },
          ],
          "method": "GET",
          "url": Object {
            "host": Array [
              "{{baseUrl}}",
            ],
            "path": Array [
              "crm",
              "companies",
              ":id",
            ],
            "query": Array [
              Object {
                "key": "raw",
                "value": "true",
              },
            ],
            "variable": Array [
              Object {
                "key": "id",
                "type": "any",
              },
            ],
          },
        },
        "status": "Unprocessable Entity (WebDAV) (RFC 4918)",
      },
      Object {
        "_": Object {
          "postman_previewlanguage": "json",
        },
        "body": "{
 \\"status_code\\": 400,
 \\"error\\": \\"Bad Request\\",
 \\"typeName\\": \\"MissingHeadersError\\",
 \\"message\\": \\"Invalid Params\\",
 \\"detail\\": \\"occaecat Excepteur incididunt magna\\",
 \\"ref\\": \\"https://developers.apideck.com/errors#unauthorizederror\\"
}",
        "code": 500,
        "cookie": Array [],
        "header": Array [
          Object {
            "key": "Content-Type",
            "value": "application/json",
          },
        ],
        "id": "5e6a65d6-e275-419f-b416-3c3dc2eab05d",
        "name": "Unexpected error",
        "originalRequest": Object {
          "header": Array [
            Object {
              "description": Object {
                "content": "Added as a part of security scheme: bearer",
                "type": "text/plain",
              },
              "key": "Authorization",
              "value": "{{bearerToken}}",
            },
            Object {
              "description": Object {
                "content": "(Required) ID of the consumer which you want to get or push data from",
                "type": "text/plain",
              },
              "key": "x-apideck-consumer-id",
              "value": "{{consumerId}}",
            },
            Object {
              "description": Object {
                "content": "(Required) The ID of your Unify application",
                "type": "text/plain",
              },
              "key": "x-apideck-app-id",
              "value": "{{applicationId}}",
            },
            Object {
              "description": Object {
                "content": "Provide the service id you want to call (e.g., pipedrive). [See the full list in the connector section.](#section/Connectors) Only needed when a consumer has activated multiple integrations for a Unified API.",
                "type": "text/plain",
              },
              "key": "x-apideck-service-id",
              "value": "{{serviceId}}",
            },
          ],
          "method": "GET",
          "url": Object {
            "host": Array [
              "{{baseUrl}}",
            ],
            "path": Array [
              "crm",
              "companies",
              ":id",
            ],
            "query": Array [
              Object {
                "key": "raw",
                "value": "true",
              },
            ],
            "variable": Array [
              Object {
                "key": "id",
                "type": "any",
              },
            ],
          },
        },
        "status": "Internal Server Error",
      },
    ],
  },
  "method": "GET",
  "path": "/crm/companies/:id",
  "pathParams": Array [
    Object {
      "description": "(Required) ID of the record you are acting upon.",
      "name": "id",
      "value": "{{companyId}}",
    },
  ],
  "pathRef": "GET::/crm/companies/{id}",
  "pathRefVariable": "GET::/crm/companies/{{companyId}}",
  "queryParams": Array [
    Object {
      "name": "raw",
      "value": "true",
    },
  ],
  "requestHeaders": Array [
    Object {
      "description": "(Required) ID of the consumer which you want to get or push data from",
      "name": "x-apideck-consumer-id",
      "value": "{{consumerId}}",
    },
    Object {
      "description": "(Required) The ID of your Unify application",
      "name": "x-apideck-app-id",
      "value": "{{applicationId}}",
    },
    Object {
      "description": "Provide the service id you want to call (e.g., pipedrive). [See the full list in the connector section.](#section/Connectors) Only needed when a consumer has activated multiple integrations for a Unified API.",
      "name": "x-apideck-service-id",
      "value": "{{serviceId}}",
    },
  ],
}
`;
